Setup new file hierarchy.

--- a/examples/galnet.html
+++ b/examples/galnet.html
@@ -38,8 +38,8 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r75/three.min.js"></script>
 
   <!-- Launch ED3Dmap -->
-  <link href="css/styles.css" rel="stylesheet" type="text/css" />
-  <script src="js/ed3dmap.min.js?v=5"></script>
+  <link href="../css/styles.css" rel="stylesheet" type="text/css" />
+  <script src="../js/ed3dmap.min.js?v=5"></script>
   <script type="text/javascript">
 
     Ed3d.init({
