--- a/examples/routes.html
+++ b/examples/routes.html
@@ -4,7 +4,7 @@
   <meta http-equiv="content-type" content="text/html; charset=UTF-8">
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
-  <title>NO JSon file test</title>
+  <title>Milky Way</title>
   <link href="http://fonts.googleapis.com/css?family=Orbitron:400" rel="stylesheet" type="text/css" />
   <!-- Custom CSS -->
   <style type="text/css">
@@ -30,10 +30,20 @@
 
   #edmap {
     position: fixed;
-    top: 15%;
+    top: 10%;
     right: 0;
     width: 100%;
-    height: 70%;
+    height: 80%;
+  }
+  #debug {
+    position: fixed;
+    bottom: 5%;
+    right: 0;
+    width: 100%;
+    text-align: center;
+    color: #aaa;
+    font-family: "Helvetica";
+    font-size: 0.8rem;
   }
   </style>
 
@@ -41,9 +51,11 @@
 
   <body>
 
-    <h1>NO JSon file test</h1>
+    <h1>Milky Way</h1>
 
     <div id="edmap"></div>
+
+    <div id="debug"></div>
 
 
   <!-- jQuery -->
@@ -51,38 +63,27 @@
   <!-- Three.js -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r75/three.min.js"></script>
 
-  <!-- JSon inside a container -->
-  <div id="json_data">
-  [
-    {
-      "name": "Sol",
-      "coords": {
-        "x": 0,
-        "y": 0,
-        "z": 0
-      }
-    },
-    {
-      "name": "Solati",
-      "coords": {
-        "x": 66.53125,
-        "y": 29.1875,
-        "z": 34.6875
-      }
-    }
-  ]
-  </div>
-
   <!-- Launch ED3Dmap -->
-  <link href="css/styles.css" rel="stylesheet" type="text/css" />
-  <script src="js/ed3dmap.min.js?v=4"></script>
+  <link href="../css/styles.css" rel="stylesheet" type="text/css" />
+  <script src="../js/ed3dmap.min.js?v=5"></script>
   <script type="text/javascript">
+
+    var d = new Date()
+    d.setDate(d.getDate() - 1);
+    var queryDate = d.getFullYear()+'-'+(d.getMonth()+1)+'-'+d.getDate()+' '+d.getHours()+':00:00';
 
     Ed3d.init({
         container   : 'edmap',
-        jsonContainer : 'json_data',
-        withHudPanel : false,
-        effectScaleSystem : [128,1500]
+       // jsonPath    : "http://www.edsm.net/api-v1/systems?coords=1&known=1&startdatetime="+queryDate,
+        jsonPath    : "json_samples/routes.json",
+        withHudPanel : true,
+        hudMultipleSelect : false,
+        effectScaleSystem : [50,10000],
+        startAnim: true,
+        showGalaxyInfos: true,
+        systemColor: '#FF9D00',
+        playerPos: [25,-2100,-3900],
+        cameraPos: [25,9100,-7900],
     });
 
   </script>
