--- a/examples/no_jsonfile.html
+++ b/examples/no_jsonfile.html
@@ -4,7 +4,7 @@
   <meta http-equiv="content-type" content="text/html; charset=UTF-8">
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
-  <title>Milky Way</title>
+  <title>NO JSon file test</title>
   <link href="http://fonts.googleapis.com/css?family=Orbitron:400" rel="stylesheet" type="text/css" />
   <!-- Custom CSS -->
   <style type="text/css">
@@ -30,20 +30,10 @@
 
   #edmap {
     position: fixed;
-    top: 10%;
+    top: 15%;
     right: 0;
     width: 100%;
-    height: 80%;
-  }
-  #debug {
-    position: fixed;
-    bottom: 5%;
-    right: 0;
-    width: 100%;
-    text-align: center;
-    color: #aaa;
-    font-family: "Helvetica";
-    font-size: 0.8rem;
+    height: 70%;
   }
   </style>
 
@@ -51,12 +41,9 @@
 
   <body>
 
-    <h1>Milky Way</h1>
+    <h1>NO JSon file test</h1>
 
     <div id="edmap"></div>
-
-    <div id="debug"></div>
-
 
 
   <!-- jQuery -->
@@ -64,26 +51,38 @@
   <!-- Three.js -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r75/three.min.js"></script>
 
-  <!-- Launch ED3Dmap -->
-  <link href="css/styles.css" rel="stylesheet" type="text/css" />
-  <script src="js/ed3dmap.min.js?v=6"></script>
-  <script type="text/javascript">
+  <!-- JSon inside a container -->
+  <div id="json_data">
+  [
+    {
+      "name": "Sol",
+      "coords": {
+        "x": 0,
+        "y": 0,
+        "z": 0
+      }
+    },
+    {
+      "name": "Solati",
+      "coords": {
+        "x": 66.53125,
+        "y": 29.1875,
+        "z": 34.6875
+      }
+    }
+  ]
+  </div>
 
-    var d = new Date()
-    d.setDate(d.getDate() - 1);
-    var queryDate = d.getFullYear()+'-'+(d.getMonth()+1)+'-'+d.getDate()+' '+d.getHours()+':00:00';
+  <!-- Launch ED3Dmap -->
+  <link href="../css/styles.css" rel="stylesheet" type="text/css" />
+  <script src="../js/ed3dmap.min.js?v=4"></script>
+  <script type="text/javascript">
 
     Ed3d.init({
         container   : 'edmap',
-       // jsonPath    : "http://www.edsm.net/api-v1/systems?coords=1&known=1&startdatetime="+queryDate,
-        jsonPath    : "json_samples/galnet.json",
+        jsonContainer : 'json_data',
         withHudPanel : false,
-        hudMultipleSelect : false,
-        effectScaleSystem : [50,10000],
-        startAnim: false,
-        showGalaxyInfos: true,
-        cameraPos: [25,14100,-12900],
-        systemColor: '#FF9D00'
+        effectScaleSystem : [128,1500]
     });
 
   </script>
